@@ -89,6 +89,7 @@ const std::string StateDatabase::BZDB_FLAGHEIGHT        = std::string("_flagHeig
 const std::string StateDatabase::BZDB_FLAGPOLEWIDTH     = std::string("_flagPoleWidth");
 const std::string StateDatabase::BZDB_FLAGPOLESIZE      = std::string("_flagPoleSize");
 const std::string StateDatabase::BZDB_FLAGRADIUS        = std::string("_flagRadius");
+const std::string StateDatabase::BZDB_FRICTION		= std::string("_friction");
 const std::string StateDatabase::BZDB_GMISSILEANG	= std::string("_gMissileAng");
 const std::string StateDatabase::BZDB_GMISSILEADLIFE    = std::string("_gMissileAdLife");
 const std::string StateDatabase::BZDB_GRAVITY		= std::string("_gravity");
@@ -104,6 +105,7 @@ const std::string StateDatabase::BZDB_MAXFLAGGRABS      = std::string("_maxFlagG
 const std::string StateDatabase::BZDB_MAXLOD		= std::string("_maxLOD");
 const std::string StateDatabase::BZDB_MOMENTUMLINACC  	= std::string("_momentumLinAcc");
 const std::string StateDatabase::BZDB_MOMENTUMANGACC  	= std::string("_momentumAngAcc");
+const std::string StateDatabase::BZDB_MOMENTUMFRICTION 	= std::string("_momentumFriction");
 const std::string StateDatabase::BZDB_MGUNADVEL  	= std::string("_mGunAdVel");
 const std::string StateDatabase::BZDB_MGUNADRATE 	= std::string("_mGunAdRate");
 const std::string StateDatabase::BZDB_MGUNADLIFE 	= std::string("_mGunAdLife");
